fix delete button background on wrapped text

--- a/cdap-ui/app/features/tracker/tracker.less
+++ b/cdap-ui/app/features/tracker/tracker.less
@@ -826,6 +826,9 @@ body.state-tracker-detail-entity {
           height: 39px;
           border: none;
           border-radius: 0;
+          background-color: transparent;
+
+          &.plus { background-color: white; }
         }
       }
 
